# qpilot

./: .dockerignore  .env.example  .gitignore  404.html  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_analysis_fields.py  b7b7b4838049_initial_schema.py  c2d3e4f5a6b7_add_users_table.py  d3e4f5a6b7c8_add_session_user_id.py  e4f5a6b7c8d9_add_teams_tables.py
app/: config.py  exceptions.py  logging_.py  main.py
app/ai/: __init__.py  models.py  prompt_manager.py  protocol.py  registry.py  resilience.py  response_validator.py
app/ai/providers/: __init__.py  ollama.py  openrouter.py
app/api/v1/: api.py  cleanup.py  health.py  providers.py  settings.py
app/domain/: models.py
app/infrastructure/: __init__.py  database.py  repository.py
app/infrastructure/models/: __init__.py  analysis_session.py  base.py
app/middleware/: request_id.py
app/modules/api_test_generation/: __init__.py  models.py  repository.py  router.py  service.py  spec_parser.py
app/modules/auth/: middleware.py  router.py
app/modules/failure_analysis/: __init__.py  artifact_service.py  models.py  repository.py  router.py  service.py
app/modules/requirement_analysis/: __init__.py  models.py  repository.py  router.py  service.py
app/modules/teams/: service.py
assets/: index-D_WZg_UA.js  index-ILLLPqii.css
docs/: development.md  journal.md  mvp-scope.md  non-goals.md  roadmap.md  success-criteria.md  vision.md
docs/adr/: ADR-001-provider-abstraction.md  ADR-002-prompt-management.md  ADR-003-module-architecture.md  ADR-004-database-schema.md  ADR-005-api-design.md  ADR-006-frontend-architecture.md  ADR-007-api-test-generation.md
docs/diagrams/: component.md  container.md  context.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/app/: providers.tsx  router.tsx
frontend/src/components/: backend-banner.tsx  empty-state.tsx  error-boundary.tsx  loading-state.tsx  protected-route.tsx  section-card.tsx  session-search.tsx  theme-toggle.tsx
frontend/src/hooks/: use-auth.tsx  use-health.ts  use-theme.tsx
frontend/src/layouts/: root-layout.tsx  sidebar.tsx  topbar.tsx
frontend/src/lib/: constants.ts  utils.ts
frontend/src/services/: api-client.ts  cleanup.ts  health.ts  index.ts  settings.ts
frontend/src/types/: api.ts  index.ts
frontend/tests/: setup.ts  test-utils.tsx
scripts/: install.ps1  install.sh
tests/: conftest.py  test_config.py  test_database.py  test_health.py  test_repository.py
tests/ai/: test_models.py  test_ollama_provider.py  test_openrouter_provider.py  test_prompt_manager.py  test_protocol.py  test_registry.py  test_response_validator.py
(+89 files in other folders)
