[project]
name = "qpilot"
version = "0.1.0"
description = "AI-Powered Quality Engineering Platform"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Validation & config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",

    # Templates
    "jinja2>=3.1.0",

    # Logging
    "structlog>=24.0.0",

    # HTTP client (for provider adapters)
    "httpx>=0.27.0",
    "asgi-lifespan>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "aiosqlite>=0.20.0",
    "asgi-lifespan>=2.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "SIM117", # allow multiple with statements
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG001", "ARG002"]
"app/modules/**/tests/**" = ["ARG001", "ARG002"]
"app/modules/**/tests/*" = ["ARG001", "ARG002"]
"**/router.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_any_unimported = false
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "sqlalchemy.*",
    "asyncpg.*",
    "yaml",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app.modules.*.tests.*",
    "app.modules.*.tests",
    "app.modules.api_test_generation.tests.conftest",
]
disallow_untyped_defs = false
disable_error_code = [
    "arg-type",
    "method-assign",
    "type-arg",
    "attr-defined",
]

[tool.pytest.ini_options]
testpaths = ["tests", "app/modules"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"
